--- a/src/styles.css
+++ b/src/styles.css
@@ -22,6 +22,10 @@ h3 {
   font-size: 20px;
 }
 
+h3::first-letter{
+  text-transform: capitalize;
+}
+
 h4 {
   font-size: 16px;
   font-weight: 300;
