--- a/src/styles.css
+++ b/src/styles.css
@@ -133,12 +133,25 @@ h6 {
   margin: 40px;
 }
 
-.days {
+.days-box {
   background-color: #fbfbfc;
   border-radius: 30px;
+  text-align: center;
   width: fit-content;
   margin: 0px 0px 0px 12px;
   padding: 15px 15px;
+}
+
+.weather-forecast-temperatures{
+  color: #5a6275;
+  margin: 0;
+  font-size: 14px;
+  font-weight: 300;
+}
+
+.icon-forecast{
+  margin-top: 15px;
+  margin-bottom: 15px;
 }
 
 .current-temperature .active {
