--- a/src/styles.css
+++ b/src/styles.css
@@ -28,8 +28,12 @@ body {
 h3,
 h4,
 h5 {
-  color: #5a6275;
+  color: #44486c;
   margin: 0;
+}
+
+h1,h2,h6, .current-temperature, .units{
+  color: #44486c;
 }
 
 h1 {
@@ -72,12 +76,14 @@ h6 {
   background-color: rgba(255, 255, 255, 0.3);
   padding: 50px 50px 50px;
   margin: 70px auto;
-  border-radius: 5px;
+  border-radius: 25px;
 }
 
 .container-header {
   padding-bottom: 0px;
 }
+
+
 .buttonLocation {
   border-radius: 30px;
   padding: 0.375rem 10px;
@@ -87,9 +93,13 @@ h6 {
 
 .col-1 {
   display: grid;
-
   width: 25px;
 }
+
+.col-6{
+  padding-left: 10px;
+}
+
 .locationIcon {
   display: inline-grid;
   opacity: 50%;
@@ -108,12 +118,12 @@ h6 {
 .form-control {
   border-radius: 30px;
   padding: 0.375rem 20.75px;
-  background-color: #fbfbfc;
+  background-color: rgba(255, 255, 255, 0.3);
   border: 0;
 }
 
 .text-align-left {
-  padding: 0;
+  padding-left: 5px;
 }
 
 .icon {
@@ -129,10 +139,10 @@ h6 {
 }
 
 .container-inside {
-  background-color: #fbfbfc;
+  background-color: rgba(255, 255, 255, 0.3);
   max-width: 620px;
   padding: 35px 0 35px 0;
-  border-radius: 5px;
+  border-radius: 10px;
 }
 .align-padding {
   display: grid;
@@ -158,7 +168,7 @@ h6 {
 }
 
 .days-box {
-  background-color: #fbfbfc;
+  background-color: rgba(255, 255, 255, 0.3);
   border-radius: 35px;
   text-align: center;
   width: fit-content;
@@ -184,7 +194,7 @@ h6 {
 }
 
 .current-temperature .active {
-  color: black;
+  color:#44486c;
   cursor: default;
   text-decoration: none;
   font-kerning: auto;
@@ -196,7 +206,7 @@ h6 {
   transform: scale(115%);
 }
 .non-active {
-  color: blue;
+  color: #4593f8;
   text-decoration: none;
   cursor: default;
   font-kerning: auto;
