--- a/src/styles.css
+++ b/src/styles.css
@@ -176,7 +176,7 @@ h6 {
 }
 
 .weather-forecast-temperatures{
-  color: #5a6275;
+  color: #44486c;
   margin: 0;
   font-size: 13px;
   font-weight: 350;
@@ -184,12 +184,12 @@ h6 {
 }
 
 .weather-forecast-temperature-max{
-  color: black;
+  color: #282c68;
 }
 
 .icon-forecast{
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin-top: 3px;
+  margin-bottom: 3px;
   width: 60px;
 }
 
